--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </form>
 
     <!-- hex value display here -->
-    <div class="hex-panel col-6">
+    <div class="hex-panel col-6 mt-3">
       <h2>HEX</h2>
       <input type="text" class="form-control hex-value" value="#000000" readonly>
       <div class="hex-color mt-3"></div>
