--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- red -->
       <div class="form-group row">
         <label for="red" class="col-form-label">R:</label>
-        <div class="red">
+        <div class="redone">
           <input id="red" type="text" class="form-control m-1" oninput="if(value>255)value=255"
             onkeyup="value=value.replace(/[^\d]/g,'')" onblur="value=value.replace(/[^\d]/g,'')" placeholder="0-255" />
         </div>
@@ -28,7 +28,7 @@
       <!-- green -->
       <div class="form-group row">
         <label for="green" class="col-form-label">G:</label>
-        <div class="green">
+        <div class="greenone">
           <input id="green" type="text" class="form-control m-1" oninput="if(value>255)value=255"
             onkeyup="value=value.replace(/[^\d]/g,'')" onblur="value=value.replace(/[^\d]/g,'')" placeholder="0-255">
         </div>
@@ -37,7 +37,7 @@
       <!-- blue -->
       <div class="form-group row">
         <label for="blue" class="col-form-label">B:</label>
-        <div class="blue">
+        <div class="blueone">
           <input id="blue" type="text" class="form-control m-1" oninput="if(value>255)value=255"
             onkeyup="value=value.replace(/[^\d]/g,'')" onblur="value=value.replace(/[^\d]/g,'')" placeholder="0-255">
         </div>
